<resources>
    <string name="app_name">SteamGifts</string>
    <string name="navigation_about">About</string>
    <string name="navigation_help">Help</string>

    <!-- Navigation for Giveaways -->
    <string name="navigation_giveaways">Giveaways</string>
    <string name="navigation_giveaways_all">All</string>
    <string name="navigation_giveaways_group">Group</string>
    <string name="navigation_giveaways_wishlist">Wishlist</string>
    <string name="navigation_giveaways_new">New</string>
    <string name="navigation_giveaways_saved">Starred</string>
    <string name="navigation_giveaways_all_title">All Giveaways</string>
    <string name="navigation_giveaways_group_title">Group Giveaways</string>
    <string name="navigation_giveaways_wishlist_title">Wishlist Giveaways</string>
    <string name="navigation_giveaways_new_title">New Giveaways</string>
    <string name="navigation_giveaways_saved_title">Starred Giveaways</string>

    <!-- Navigation for Discussions -->
    <string name="navigation_discussions">Discussions</string>
    <string name="navigation_discussions_all">All</string>
    <string name="navigation_discussions_all_title">All Discussions</string>
    <string name="navigation_discussions_announcements">Announcements</string>
    <string name="navigation_discussions_announcements_title">Announcements</string>
    <string name="navigation_discussions_bugs_suggestions">Bugs / Suggestions</string>
    <string name="navigation_discussions_bugs_suggestions_title">Bugs / Suggestions</string>
    <string name="navigation_discussions_deals">Deals</string>
    <string name="navigation_discussions_deals_title">Deals</string>
    <string name="navigation_discussions_general">General</string>
    <string name="navigation_discussions_general_title">General Discussions</string>
    <string name="navigation_discussions_group_recruitment">Group Recruitment</string>
    <string name="navigation_discussions_group_recruitment_title">Group Recruitment</string>
    <string name="navigation_discussions_lets_play_together">"Let's Play Together"</string>
    <string name="navigation_discussions_lets_play_together_title">"Let's Play Together"</string>
    <string name="navigation_discussions_off_topic">Off-Topic</string>
    <string name="navigation_discussions_off_topic_title">Off-Topic</string>
    <string name="navigation_discussions_puzzles">Puzzles</string>
    <string name="navigation_discussions_puzzles_title">Puzzles</string>

    <!-- Drawer items -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_profile_info">Level %1$d - %2$dP</string>
    <string name="navigation_sync">Sync</string>

    <!-- Login/Logout/bye -->
    <string name="guest">Guest</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logged_out">Goodbye!</string>

    <!-- About dialog -->
    <string name="about_made_with_love">made with {faw-heart} by kt</string>
    <string name="about_forum_thread">Discuss on SteamGifts.com</string>
    <string name="about_mail">Contact via Mail</string>
    <string name="about_source_code">Source Code</string>

    <!-- Details: Enter/Leave/Comment -->
    <string name="enter_giveaway">Enter</string>
    <string name="enter_giveaway_with_points">Enter (%dP)</string>
    <string name="login_to_enter_giveaway">Login to Enter</string>
    <string name="leave_giveaway">Leave</string>
    <string name="leave_giveaway_with_points">Leave (%dP)</string>

    <!-- Contextual menus -->
    <string name="actions">Actions</string>
    <string name="add_comment">Comment</string>
    <string name="send_comment">Send</string>

    <string name="comment_sent">Comment sent, please reload to see.</string>
    <string name="comment_not_sent">Comment could not be sent</string>

    <!-- -->
    <string name="open_steam_store">Steam Store</string>
    <string name="open_steam_profile">Steam Profile</string>
    <string name="search">Search</string>
    <string name="end_of_endless_list">You\'ve reached the end.</string>
    <string name="open_browser">View in Browser</string>
    <string name="loading">Loading</string>

    <string name="hide_game">Hide Game</string>
    <string name="game_was_hidden">%s is hidden</string>
    <string name="game_was_hidden_undo">Undo</string>

    <!-- Go to menu -->
    <string name="go_to">Go to&#8230;</string>
    <string name="go_to_giveaway">Giveaway</string>
    <string name="go_to_discussion">Discussion</string>
    <string name="go_to_user">User</string>

    <!-- Profiles -->
    <string name="user_level">Level %d</string>
    <string name="user_giveaways_created">Sent</string>
    <string name="user_giveaway_won">Won</string>
    <string name="user_giveaways_created_count">%1$d sent\n%2$s</string>
    <string name="user_giveaway_won_count">%1$d won\n%2$s</string>
    <string name="private_giveaway">This giveaway is private.</string>

    <string name="user_tab_notifications">Messages</string>
    <string name="user_tab_won">Won</string>
    <string name="user_tab_entered">Entered</string>
    <string name="user_tab_created">Created</string>

    <!-- sgtools.info -->
    <string name="sgtools_loading">Loading SGTools</string>
    <string name="sgtools_check">Check Requirements</string>

    <!-- Settings -->
    <string name="preferences">Settings</string>
    <string name="preference_theme_header">Theme</string>
    <string name="preference_theme_nightmode">Night Mode</string>
    <string name="preference_theme_nightmode_sub">Use a dark background for the application</string>

    <string name="preferences_giveaways">Giveaways</string>
    <string name="preference_giveaway_load_images">Load Images</string>
    <string name="preference_giveaway_show_pinned">Pinned Giveaways</string>
    <string name="preference_giveaway_show_pinned_on">Always showing at the top</string>
    <string name="preference_giveaway_show_pinned_off">Not highlighted in a special way</string>

    <string name="preferences_discussions">Discussions</string>
    <string name="preference_discussion_comments_reversed">Inverse Comment Order</string>
    <string name="preference_discussion_comments_reversed_sub_off">Show oldest comments first</string>
    <string name="preference_discussion_comments_reversed_sub_on">Show newest comments first</string>

    <string name="preferences_sg_header">SteamGifts Account</string>
    <string name="preference_sg_sync">Sync Account</string>
    <string name="preference_sg_hidden_games">Hidden Games</string>
    <string name="preference_sg_hidden_games_sub">Un-hide games from your account</string>

    <string name="preferences_sgtools_header">sgtools.info Account</string>
    <string name="preference_sgtools_logout">Logout</string>
    <string name="preference_sgtools_logged_out">Cleared sgtools.info data</string>

    <string name="hidden_games_snack">Long-Press a Game to remove it</string>
    <string name="hidden_games_snack_dismiss">Got it</string>

    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    <string name="view_profile">View Profile</string>
    <string name="mark_read">Mark as Read</string>

    <!-- Intro -->
    <string name="intro_giveaway_context">Long-Clicking a Giveaway or Comment to quickly enter or comment.</string>
    <string name="intro_giveaway_context_header">Context Menus</string>

    <string name="intro_giveaway_indicators_header">Indicators</string>
    <string name="intro_giveaway_indicators_whitelist">Whitelist Giveaway</string>
    <string name="intro_giveaway_indicators_group">Group Giveaway</string>
    <string name="intro_giveaway_indicators_level_positive">At or below your Level</string>
    <string name="intro_giveaway_indicators_level_negative">Above your Level</string>
    <string name="intro_giveaway_indicators_private">Private Giveaway</string>
    <string name="intro_giveaway_indicators_region_restricted">Region Restricted</string>
    <string name="intro_giveaway_store_info_header">Steam Store Info</string>
    <string name="intro_giveaway_store_info">Swipe Right for a quick overview of the Steam Store entry.</string>
    <string name="intro_giveaway_welcome">Press \"Next\" for a few quick hints.</string>
    <string name="intro_giveaway_welcome_header">Welcome to\nSteamGifts</string>

    <!-- Filters -->
    <string name="filter">Filter Giveaways</string>
    <string name="ok">OK</string>
    <string name="reset">Clear Filter</string>
    <string name="filter_min">(min)</string>
    <string name="filter_max">(max)</string>
    <string name="filter_entries">Entries</string>
    <string name="filter_level">Level</string>
    <string name="filter_points">Points</string>
    <string name="filter_entered_checkbox">Hide entered Giveaways</string>
    <string name="filter_whitelist_or_group_checkbox">Show group and whitelist giveaways regardless of level</string>

    <!-- Saving Giveaways -->
    <string name="add_saved_giveaway">Star Giveaway</string>
    <string name="remove_saved_giveaway">Unstar Giveaway</string>
    <string name="added_saved_giveaway"><![CDATA[Giveaway was starred and can be found under Giveaways > Starred.]]></string>
    <string name="removed_saved_giveaway">Giveaway is no longer starred.</string>

    <!-- Sync -->
    <string name="sync_details">Public Steam data is automatically synced every few days. You can however use the option below to sync your profile.</string>
    <string name="sync_now">Sync Account</string>
    <string name="sync_profile">Steam Privacy Settings</string>
    <string name="sync_title">Sync Account with Steam</string>

    <!-- Placeholders, mostly used for intro text localization -->
    <string name="placeholder_giveaway_creator">{faw-user} Creator</string>
    <string name="placeholder_giveaway_start">{faw-calendar} Start</string>
    <string name="placeholder_giveaway_end">{faw-clock-o} End</string>
    <string name="placeholder_giveaway_description">Description of the Giveaway you\'re about to enter</string>
</resources>
