<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_sg_header">
        <Preference android:title="@string/preference_sg_sync">
            <intent
                android:targetClass="net.mabako.steamgifts.activities.SyncActivity"
                android:targetPackage="net.mabako.steamgifts" />
        </Preference>

        <Preference
            android:summary="@string/preference_sg_hidden_games_sub"
            android:title="@string/preference_sg_hidden_games">

            <intent
                android:targetClass="net.mabako.steamgifts.activities.settings.ViewHiddenGamesActivity"
                android:targetPackage="net.mabako.steamgifts" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>