<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sgbg"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin_outer"
        card_view:cardBackgroundColor="?attr/colorCardBackground"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="4dp"
                android:text="@string/sync_title"
                android:textSize="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:paddingBottom="4dp"
                android:text="@string/sync_details" />

            <Button
                android:id="@+id/sync_now"
                style="@style/MediumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sync_now" />

            <Button
                android:id="@+id/privacy_settings"
                style="@style/MediumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sync_profile" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>