<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    app:alignmentMode="alignBounds"
    app:columnCount="3"
    app:useDefaultMargins="true">

    <!-- Level -->
    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/filter_level"
        app:layout_columnWeight="0"
        app:layout_gravity="end"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/filter_level_min"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter_min"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:gravity="center"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/filter_level_max"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter_max"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:gravity="center"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:imeOptions="actionNext"/>


    <!-- Entries -->
    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/filter_entries"
        app:layout_columnWeight="0"
        app:layout_gravity="end"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/filter_entries_min"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter_min"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:gravity="center"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/filter_entries_max"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter_max"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:gravity="center"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:imeOptions="actionNext"/>

    <!-- Points -->
    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/filter_points"
        app:layout_columnWeight="0"
        app:layout_gravity="end"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/filter_points_min"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter_min"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:gravity="center"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/filter_points_max"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter_max"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:gravity="center"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
</android.support.v7.widget.GridLayout>